<resources>
    <string name="app_name">SprintEightHomeworkOne</string>
    <string name="app_title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="licence_agreement">Пользовательское соглашение</string>
    <string name="ic_back_description">На главную</string>
</resources>