<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_high" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/ic_back_description"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="12dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_base" />

    </FrameLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="@dimen/relative_high"
        android:layout_marginTop="@dimen/margin_layout"
        android:paddingVertical="@dimen/relative_margin_start_top"
        android:paddingStart="@dimen/margin_base"
        android:paddingEnd="6dp"
        android:text="@string/dark_mode"
        android:textSize="@dimen/font_size_list"
        tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/relative_high" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginTop="@dimen/relative_margin_start_top"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_list" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/relative_margin_end_top"
            android:layout_marginEnd="@dimen/relative_margin_end"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/relative_high" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginTop="@dimen/relative_margin_start_top"
            android:text="@string/contact_support"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_list" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/relative_margin_end_top"
            android:layout_marginEnd="@dimen/relative_margin_end"
            android:contentDescription="@string/contact_support"
            android:src="@drawable/ic_contact_support" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/relative_high" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginTop="@dimen/relative_margin_start_top"
            android:text="@string/licence_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_list" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/relative_margin_end_top"
            android:layout_marginEnd="@dimen/relative_margin_end"
            android:contentDescription="@string/licence_agreement"
            android:src="@drawable/ic_forward" />

    </FrameLayout>

</LinearLayout>