<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_high" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_base"
            android:layout_marginTop="14dp"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginBottom="@dimen/margin_base" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_base"
            android:layout_marginHorizontal="@dimen/margin_base"
            android:layout_marginTop="@dimen/margin_layout"
            app:cornerRadius="@dimen/margin_base"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="@dimen/icon_padding"
            android:foreground="?attr/selectableItemBackground" />

        <Button
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_base"
            android:layout_marginHorizontal="@dimen/margin_base"
            android:layout_marginVertical="@dimen/margin_base"
            app:cornerRadius="@dimen/margin_base"
            app:icon="@drawable/ic_media"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="@dimen/icon_padding"
            android:foreground="?attr/selectableItemBackground" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_base"
            android:layout_marginHorizontal="@dimen/margin_base"
            android:layout_marginBottom="@dimen/margin_layout"
            app:cornerRadius="@dimen/margin_base"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="@dimen/icon_padding"
            android:foreground="?attr/selectableItemBackground" />

    </LinearLayout>

</LinearLayout>


